<resources>
    <string name="app_name">Remind2Call</string>
    <string name="action_add">Add remind</string>
    <string name="action_call">Call now</string>
    <string name="action_later">Delay alarm</string>

    <string name="list_empty">you have no current reminder\ntap to enter a new reminder</string>

    <string name="contact_remind">Remind me to call %s!</string>
    <string name="contact_date">Date</string>
    <string name="contact_time">Time</string>
    <string name="contact_note_hint">add note...</string>
    <string name="contact_save">SAVE</string>
    <string name="contact_delete">DELETE</string>

    <string name="list_remind_at">call at %s</string>
    <string name="list_today">TODAY</string>

    <string name="delete_confirm_title">Confirm Delete</string>
    <string name="delete_confirm_message">Are you sure you want to delete the reminder for %1$s at: %2$s?</string>
    <string name="delete_confirm_message_single">Are you sure you want to delete this reminder</string>

    <string name="save_confirm_title">Confirm Save</string>
    <string name="save_confirm_message">The selected date is not in the future, if you save this reminder you will not receive a notification</string>

    <string name="notify_remind">it\'s time to call %s!</string>
    <string name="no_activity_alert_title">Reminder</string>
    <string name="no_activity_alert_message">remind to call %1$s at number %2$s</string>


</resources>
