<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_material_light"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent_material_light"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/contact_photo"
                android:layout_width="130dp "
                android:layout_height="130dp"
                android:layout_margin="20dp"
                android:src="@drawable/contact" />

            <TextView
                android:id="@+id/contact_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/contact_remind"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/abc_primary_text_material_dark"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#F0F0FF"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/contact_date"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/contact_data"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:padding="10dp"
                    android:text="23 feb 2015"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/accent_material_light"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:background="#F0F0FF"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/contact_time"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/contact_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:padding="10dp"
                    android:text="16:35"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/accent_material_light"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/contact_note"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="#F0F0FF"
                android:gravity="top|left"
                android:hint="@string/contact_note_hint"
                android:minHeight="150dp"
                android:padding="10dp"
                android:textColor="@color/accent_material_light" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@drawable/button_selector"
            android:text="@string/contact_delete" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@drawable/button_selector"
            android:text="@string/contact_save" />
    </LinearLayout>


</LinearLayout>
